<resources>
    <string name="app_name">LoginComponent</string>

    <string name="explain">提示</string>
    <string name="login">登录</string>

    <string name="input_username">请输入手机号</string>
    <string name="input_password">请输入短信验证码</string>
    <string name="send_code">获取验证码</string>
    <string name="second">秒</string>

    <!--登录-->
    <string name="text_login_title">登录</string>
    <string name="text_register">注册</string>
    <string name="hint_input_phone_number">请输入手机号码</string>
    <string name="hint_input_correct_phone_number">请输入正确手机号码</string>
    <string name="hint_input_password">请输入密码</string>
    <string name="hint_input_login_password">请输入登录密码</string>
    <string name="text_login">登录</string>
    <string name="text_forget_password">忘记密码</string>
    <string name="text_other_login">其他登录方式</string>

    <string name="login_failed">帐号或密码错误</string>
    <string name="login_exception">无效输入</string>
    <string name="logining">登录中\u2026</string>

    <!--注册-->
    <string name="text_nick_name">昵称&#12288;</string>
    <string name="hint_xiao_xiao">如：小小</string>
    <string name="text_phone_number">手机号</string>
    <string name="text_password">密码&#12288;</string>
    <string name="text_verification_code">验证码</string>
    <string name="hint_input_verification_code">请输入验证码</string>
    <string name="text_get_verification_code">获取验证码</string>
    <string name="text_user_agreement">《用户使用协议》</string>
    <string name="hint_nick_name">请输入昵称</string>

    <!--找回登录密码-->
    <string name="text_find_password">找回登录密码</string>
    <string name="hint_input_find_password_phone">请输入要找回登录密码的手机号</string>
    <string name="tools_error">报错</string>
    <string name="text_next_step">下一步</string>
    <string name="hint_input_find_verification_code">请输入短信验证码</string>

    <!--重置登录密码-->
    <string name="text_reset_password">重置登录密码</string>

    <!-- 多端登录 -->
    <string name="multiport_manager">多端登录管理</string>
    <string name="multiport_logout">下线</string>
    <string name="computer_version">云信电脑版</string>
    <string name="web_version">云信网页版</string>
    <string name="mobile_version">云信移动版</string>
    <string name="multiport_logging">正在使用</string>
    <string name="kickout_notify">下线通知</string>
    <string name="kickout_content">你的帐号被%1$s踢出下线，请确定帐号信息安全</string>
    <string name="hint_input_new_password">请输入新登录密码</string>
    <string name="hint_confirm_input_new_password">请确认新登录密码</string>
    <string name="hint_password_inconformity">两次密码输入不一致</string>


</resources>
