<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/ui_dark_config_ui_bg"
              android:orientation="vertical">


    <com.ui.widget.UINavigationView
        android:id="@+id/uinv"
        android:layout_width="match_parent"
        android:layout_height="@dimen/ui_offset_top_bar"
        android:background="@color/ui_dark_config_ui_item_bg">

    </com.ui.widget.UINavigationView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/ui_offset_56"
        android:background="@drawable/ui_edit_bg_border_bottom"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/ui_offset_12"
        android:paddingRight="@dimen/ui_offset_12">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_nick_name"
            android:textColor="@color/ui_dark_config_color_three_text"
            android:textSize="@dimen/ui_font_size_16"/>

        <com.ui.widget.UIClearEditText
            android:id="@+id/et_register_nick_name"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/ui_offset_36"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/hint_xiao_xiao"
            android:inputType="text"
            android:maxLength="32"
            android:paddingRight="@dimen/ui_offset_12"
            android:textColor="@color/ui_dark_config_color_three_text"

            android:textSize="@dimen/ui_font_size_16"/>


        <ImageView
            android:id="@+id/img_register_user_head"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/login_ic_register_user_head"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/ui_offset_56"
        android:background="@drawable/ui_edit_bg_border_bottom"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/ui_offset_12"
        android:paddingRight="@dimen/ui_offset_12">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_phone_number"
            android:textColor="@color/ui_dark_config_color_three_text"
            android:textSize="@dimen/ui_font_size_16"/>

        <com.ui.widget.UIClearEditText
            android:id="@+id/et_register_phone_number"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/ui_offset_36"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/hint_input_phone_number"
            android:inputType="phone"
            android:maxLength="11"
            android:textColor="@color/ui_dark_config_color_three_text"

            android:textSize="@dimen/ui_font_size_16"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/ui_offset_56"
        android:background="@drawable/ui_edit_bg_border_bottom"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/ui_offset_12"
        android:paddingRight="@dimen/ui_offset_12">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_verification_code"
            android:textColor="@color/ui_dark_config_color_three_text"
            android:textSize="@dimen/ui_font_size_16"/>

        <com.ui.widget.UIClearEditText
            android:id="@+id/et_register_verification_code"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/ui_offset_36"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/hint_input_verification_code"
            android:textColor="@color/ui_dark_config_color_three_text"

            android:textSize="@dimen/ui_font_size_16"/>

        <View
            android:layout_width="@dimen/ui_offset_1_px"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/ui_offset_12"
            android:layout_marginTop="@dimen/ui_offset_12"
            android:layout_marginBottom="@dimen/ui_offset_12"
            android:background="@color/ui_config_color_line"></View>

        <com.batman.baselibrary.widget.SendValidateButton
            android:id="@+id/tv_register_verification_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/ui_offset_12"
            android:text="@string/text_get_verification_code"
            android:textColor="@color/ui_config_color_main"
            android:textSize="@dimen/ui_font_size_14"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/ui_offset_56"
        android:background="@drawable/ui_edit_bg_border_bottom"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/ui_offset_12"
        android:paddingRight="@dimen/ui_offset_12">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_password"
            android:textColor="@color/ui_dark_config_color_three_text"
            android:textSize="@dimen/ui_font_size_16"/>

        <com.ui.widget.UIClearEditText
            android:id="@+id/et_register_password"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/ui_offset_36"
            android:layout_weight="1"
            android:background="@null"
            android:digits="0123456789abcdefghigklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
            android:gravity="center_vertical"
            android:hint="密码6-20位数字+字母组合"
            android:inputType="textPassword"
            android:textColor="@color/ui_dark_config_color_three_text"

            android:textSize="@dimen/ui_font_size_16"/>

    </LinearLayout>

    <Button
        android:id="@+id/btn_login_login"
        style="@style/CommonEnableButton"
        android:layout_width="@dimen/ui_btn_width"
        android:layout_height="@dimen/ui_btn_height"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/ui_offset_30"
        android:text="@string/text_register"/>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/ui_offset_30"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <android.support.v7.widget.AppCompatCheckBox
            android:id="@+id/cb_register_user_agreement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@drawable/ui_s_checkbox"
            android:checked="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/ui_offset_12"
            android:text="点击注册即表示已阅读并同意"
            android:textColor="@color/ui_dark_config_color_two_text"
            android:textSize="@dimen/ui_font_size_14"/>
    </LinearLayout>

    <com.ui.alpha.UIAlphaTextView
        android:id="@+id/tv_register_user_agreement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="@dimen/ui_offset_12"
        android:layout_marginTop="@dimen/ui_offset_8"
        android:text="@string/text_user_agreement"
        android:textColor="@color/ui_config_color_main"
        android:textSize="@dimen/ui_font_size_16"/>
</LinearLayout>

