<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/ui_dark_config_ui_bg"
              android:orientation="vertical">


    <com.ui.widget.UINavigationView
        android:id="@+id/uinv"
        android:layout_width="match_parent"
        android:layout_height="@dimen/ui_offset_top_bar">

    </com.ui.widget.UINavigationView>

    <TextView
        android:id="@+id/tv_reset_password_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ui_list_item_bg_with_border_bottom"
        android:gravity="center"
        android:paddingLeft="@dimen/ui_offset_12"
        android:paddingTop="@dimen/ui_offset_40"
        android:paddingRight="@dimen/ui_offset_12"
        android:paddingBottom="@dimen/ui_offset_40"
        android:textColor="@color/ui_dark_config_color_three_text"
        android:textSize="@dimen/ui_font_size_18"
        tools:text="186888888"/>

    <com.ui.widget.UIClearEditText
        android:id="@+id/et_reset_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/ui_offset_52"
        android:background="@drawable/ui_edit_bg_border_bottom"
        android:gravity="center_vertical"
        android:hint="@string/hint_input_new_password"
        android:paddingLeft="@dimen/ui_offset_12"
        android:paddingRight="@dimen/ui_offset_12"

        android:textSize="@dimen/ui_font_size_16"/>

    <com.ui.widget.UIClearEditText
        android:id="@+id/et_reset_password_again"
        android:layout_width="match_parent"
        android:layout_height="@dimen/ui_offset_52"
        android:background="@drawable/ui_edit_bg_border_bottom"
        android:gravity="center_vertical"
        android:hint="@string/hint_confirm_input_new_password"
        android:paddingLeft="@dimen/ui_offset_12"
        android:paddingRight="@dimen/ui_offset_12"

        android:textSize="@dimen/ui_font_size_16"/>

    <TextView
        android:id="@+id/tv_reset_password_error"
        android:layout_width="match_parent"
        android:layout_height="@dimen/ui_offset_52"
        android:background="@drawable/ui_list_item_bg_with_border_bottom"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/ui_offset_12"
        android:paddingRight="@dimen/ui_offset_12"
        android:textColor="@color/ui_config_color_red"
        android:textSize="@dimen/ui_font_size_14"
        tools:text="@string/tools_error"/>

    <Button
        android:id="@+id/btn_reset_password_confirm"
        style="@style/CommonButton"
        android:layout_width="@dimen/ui_btn_width"
        android:layout_height="@dimen/ui_btn_height"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/ui_offset_40"
        android:text="确认"/>

</LinearLayout>